[gd_scene load_steps=8 format=3 uid="uid://dl4aal8trjgcm"]

[ext_resource type="Script" path="res://player/walking.gd" id="1_6l78a"]
[ext_resource type="Script" path="res://player/BoxWeilder.gd" id="2_yu8vk"]
[ext_resource type="Script" path="res://player/BoxSceneHolder.gd" id="3_j6j62"]
[ext_resource type="PackedScene" uid="uid://ctdrkok21fmk8" path="res://box/box.tscn" id="4_2dn4k"]
[ext_resource type="Script" path="res://player/BoxCreator.gd" id="4_kgkdh"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6vbtk"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_hsq3r"]

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 5, 9, 5)
doppler_tracking = 1
projection = 1
fov = 37.8493
size = 15.0

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_6vbtk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_hsq3r")
skeleton = NodePath("../..")

[node name="Walking" type="Node" parent="." node_paths=PackedStringArray("body", "camera")]
script = ExtResource("1_6l78a")
body = NodePath("..")
camera = NodePath("../Camera3D")
speed = 15.0

[node name="BoxLogic" type="Node3D" parent="."]

[node name="BoxWeilder" type="Node3D" parent="BoxLogic"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)
script = ExtResource("2_yu8vk")

[node name="BoxSceneHolder" type="Node" parent="BoxLogic"]
script = ExtResource("3_j6j62")
box_scene = ExtResource("4_2dn4k")

[node name="BoxCreator" type="Node" parent="BoxLogic" node_paths=PackedStringArray("box_weilder", "box_scene_holder")]
script = ExtResource("4_kgkdh")
box_weilder = NodePath("../BoxWeilder")
box_scene_holder = NodePath("../BoxSceneHolder")

[node name="BoxThrower" type="Node" parent="BoxLogic"]
